@@ -5,6 +5,7 @@
 1.03 (2006/01/30)
     * (ms) Some perl-5.6.1 installations have a buggy Carp.pm. Skipping
            4 test cases for these. Reported by Andy Ford and Matisse Enzer.
+    * (ms) The DBI appender now reconnects on stale DB connections.
 
 1.02 (2005/12/10)
     * (ms) Adapted t/006Config-Java.t to cope with Win32 path separators
